# Loopai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Loopai.CloudApi.sln  README.md  TASKS.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docs-deploy.yml  sdk-integration-tests.yml
docs/: ARCHITECTURE.md  CONCEPTS.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  GETTING_STARTED.md  PHASE10-11_SDK_COMPLETE.md  PHASE4.1_WORKITEMS.md  PHASE4_PLAN.md  PHASE4_STATUS.md  PHASE4_TRANSITION_SUMMARY.md  PHASE6.2_STATUS.md  PHASE6_PLAN.md  PHASE7.1_STATUS.md  PHASE8.1_INTEGRATION_TESTS_COMPLETE.md  PLUGIN_DEVELOPMENT_GUIDE.md  README.md  REFACTORING_PLAN.md  research.md
docs-site/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/blog/: 2025-10-27-v0.3-release.md  authors.yml
docs-site/blog/2025-10-27-welcome/: index.md
docs-site/docs/: intro.md
docs-site/docs/api/: authentication.md  batch-operations.md  execution.md  metrics.md  overview.md  streaming.md  tasks.md  webhooks.md
docs-site/docs/examples/: batch-processing.md  sentiment-analysis.md  spam-detection.md
docs-site/docs/guides/: architecture.md  deployment.md  development.md  getting-started.md  performance-tuning.md  plugin-development.md
docs-site/docs/introduction/: key-features.md  use-cases.md  what-is-loopai.md
docs-site/docs/sdks/: dotnet.md  overview.md  python.md  typescript.md
docs-site/scripts/: sync-docs.js
docs/archive/: ARCHITECTURE_HYBRID.md  PHASE0_STATUS.md  PHASE1_STATUS.md  PHASE2_STATUS.md  PHASE3_PLAN.md  PHASE3_STATUS.md  PHASE4.1_WORKITEMS.md  PHASE5_STATUS.md  PHASE6.1-6.2_SUMMARY.md  PHASE6.1_STATUS.md  PHASE6.4_SUMMARY.md  PHASE7.2_STATUS.md  PHASE8_COMPLETE.md  PHASE8_STATUS.md  PHASE9_PYTHON_SDK_COMPLETE.md  TASKS.md  TEST_PHASES.md
examples/Loopai.Examples.AspNetCore/: Loopai.Examples.AspNetCore.csproj  Loopai.Examples.AspNetCore.http  Program.cs  README.md  appsettings.json
examples/Loopai.Examples.AspNetCore/Controllers/: BatchController.cs  ClassificationController.cs
examples/Loopai.Examples.AspNetCore/Properties/: launchSettings.json
helm/loopai/: Chart.yaml  README.md  values.yaml
helm/loopai/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
scripts/: check_quality.py  dev.bat  dev.sh  pack-client.bat  pack-client.sh  pack-python-client.bat  pack-python-client.sh  prepare_test_artifact.py  run_phase0_benchmark.py  run_phase1_benchmark.py  run_phase2_benchmark.py
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: advanced_batch.py  basic_usage.py  error_handling.py
sdk/python/loopai/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: __init__.py  conftest.py  test_client.py
sdk/typescript/: README.md  jest.config.js  package.json  tsconfig.json
sdk/typescript/examples/: advanced-batch.ts  basic-usage.ts  error-handling.ts
sdk/typescript/src/: client.ts  exceptions.ts  index.ts  types.ts
sdk/typescript/tests/: client.test.ts
src/Loopai.Client/: ILoopaiClient.cs  Loopai.Client.csproj  LoopaiClient.cs  LoopaiClientOptions.cs  README.md  ServiceCollectionExtensions.cs
src/Loopai.Client/Exceptions/: ExecutionException.cs  LoopaiException.cs  ValidationException.cs
src/Loopai.Client/Models/: BatchExecuteRequest.cs  BatchExecuteResponse.cs  HealthResponse.cs
src/Loopai.CloudApi/: Loopai.CloudApi.csproj  Loopai.CloudApi.http  Program.cs  README.md  appsettings.CodeBeaker.json  appsettings.Development.json  appsettings.RateLimiting.json  appsettings.json
src/Loopai.CloudApi/Configuration/: CacheSettings.cs  EdgeRuntimeSettings.cs  GeneratorServiceSettings.cs
src/Loopai.CloudApi/Controllers/: BatchController.cs  HealthController.cs  TasksController.cs  ValidationController.cs  WebhooksController.cs
src/Loopai.CloudApi/DTOs/: BatchExecuteDTOs.cs  BatchValidateDTOs.cs  CreateTaskRequest.cs  ErrorResponse.cs  ExecuteRequest.cs  ExecuteResponse.cs  TaskResponse.cs  ValidationDTOs.cs  WebhookDTOs.cs
src/Loopai.CloudApi/Data/: LoopaiDbContext.cs
src/Loopai.Core/: Loopai.Core.csproj
src/loopai/: __init__.py  models.py
tests/: test_phase0.py  test_phase2.py  test_phase3_artifact_cache.py  test_phase3_config_manager.py  test_phase3_dataset_manager.py  test_phase3_edge_api.py  test_phase3_integration.py
tests/Loopai.Client.IntegrationTests/: Loopai.Client.IntegrationTests.csproj  LoopaiClientIntegrationTests.cs  LoopaiWebApplicationFactory.cs  README.md  RetryIntegrationTests.cs
tests/Loopai.Client.Tests/: Loopai.Client.Tests.csproj  LoopaiClientTests.cs  UnitTest1.cs
tests/Loopai.CloudApi.Tests/: Loopai.CloudApi.Tests.csproj
tests/Loopai.Core.Tests/: Loopai.Core.Tests.csproj
tests/Loopai.Performance.Benchmarks/: ExecutionPipelineBenchmarks.cs  FileIoBenchmarks.cs  Loopai.Performance.Benchmarks.csproj  ProcessCreationBenchmarks.cs  Program.cs  SerializationBenchmarks.cs
tests/datasets/: phase0_binary_sentiment_trivial.json  phase1_language_detection.json  phase1_sentiment_3class.json  phase1_spam_detection.json  phase2_email_categorization.json  phase2_intent_classification.json
tests/integration/: INTEGRATION_TEST_RESULTS.md  README.md  docker-compose.yml  run-all-tests.ps1  run-all-tests.sh  test-config.json
(+146 files in other folders)
