[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopai"
version = "0.1.0"
description = "Official Python SDK for Loopai - Human-in-the-Loop AI Self-Improvement Framework"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Loopai Team", email = "support@loopai.dev" }
]
keywords = ["ai", "machine-learning", "loop", "validation", "program-synthesis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx-mock>=0.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/iyulab/loopai"
Documentation = "https://github.com/iyulab/loopai"
Repository = "https://github.com/iyulab/loopai"
Issues = "https://github.com/iyulab/loopai/issues"

[tool.hatch.build.targets.wheel]
packages = ["loopai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=loopai --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
